<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F9FF"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".SignupActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/signup_activity_title"
        app:srcCompat="@drawable/app_logo_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:fontFamily="@font/jost_extrabold"
        android:gravity="center"
        android:text="@string/signup_activity_title"
        android:textColor="#4D4646"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="username"
        android:background="@drawable/input_box_bg"
        android:fontFamily="@font/jost_medium"
        android:hint="@string/signup_hint_1"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="#999"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/input_box_bg"
        android:fontFamily="@font/jost_medium"
        android:hint="@string/signup_hint_2"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="#999"
        android:textSize="19sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp">
        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:background="@drawable/input_box_bg"
            android:fontFamily="@font/jost_medium"
            android:hint="@string/signup_hint_3"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="#999"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_input"
            tools:ignore="NotSibling" />
        <ImageButton
            android:id="@+id/toggle_pass_visibility_btn_2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:contentDescription="@string/signup_hint_3"
            android:scaleType="center"
            android:src="@drawable/ic_eye"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#777" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/semi_rounded_button_bg_2"
        android:fontFamily="@font/jost_semibold"
        android:text="@string/signup_btn_text"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="20sp"
        app:backgroundTint="#466AA5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost_medium"
            android:gravity="center"
            android:text="@string/signup_to_login_redirect_label"
            android:textColor="#727A7C"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/to_login_redirect_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="0dp"
            android:fontFamily="@font/jost_semibold"
            android:gravity="center"
            android:text="@string/signup_to_login_redirect_link"
            android:textColor="#466AA5"
            android:textColorLink="#466AA5"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>