<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_nav"
    android:layout_width="0dp"
    android:layout_height="65dp"
    android:layout_marginStart="60dp"
    android:layout_marginEnd="60dp"
    android:layout_marginBottom="16dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="#1A1818"
    app:cardCornerRadius="50dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="6dp"
        android:weightSum="4">

        <ImageView
            android:id="@+id/nav_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="16dp"
            android:layout_marginRight="-7dp"
            android:src="@drawable/ic_home"
            android:background="@drawable/nav_item_bg_selector"
            app:tint="@color/nav_icon_selector"
            android:contentDescription="@string/nav_item_1" />

        <ImageView
            android:id="@+id/nav_maps"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="16dp"
            android:layout_marginRight="-7dp"
            android:src="@drawable/ic_map"
            android:background="@drawable/nav_item_bg_selector"
            app:tint="@color/nav_icon_selector"
            android:contentDescription="@string/nav_item_2" />

        <ImageView
            android:id="@+id/nav_analytics"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="16dp"
            android:layout_marginRight="-7dp"
            android:src="@drawable/ic_analytics"
            android:background="@drawable/nav_item_bg_selector"
            app:tint="@color/nav_icon_selector"
            android:contentDescription="@string/nav_item_3" />

        <ImageView
            android:id="@+id/nav_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="16dp"
            android:src="@drawable/ic_settings"
            android:background="@drawable/nav_item_bg_selector"
            app:tint="@color/nav_icon_selector"
            android:contentDescription="@string/nav_item_4" />

    </LinearLayout>

</androidx.cardview.widget.CardView>