<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginBottom="15dp"
    android:background="@drawable/semi_rounded_button_bg"
    android:backgroundTint="#38383E"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-12dp"
        app:tint="#929292" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:alpha="0.7"
        android:contentDescription="@string/subscription_activity_title"
        android:rotation="12"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_crown"
        app:tint="#FFC107" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/jost_regular"
        android:gravity="center"
        android:lineSpacingExtra="-4dp"
        android:text="@string/to_plans_redirect_text"
        android:textColor="#AAA"
        android:textSize="15sp" />

    <Button
        android:id="@+id/toSubscriptionsRedirectBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/jost_bold"
        android:paddingVertical="12dp"
        android:text="@string/to_plans_redirect_btn"
        android:textColor="@color/white"
        android:textSize="17sp" />

</LinearLayout>