<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    tools:context=".IntroActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/jost_bold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/about"
        android:textColor="#CCCCCC"
        android:textSize="20sp" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/introViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomControls" />

    <!-- Bottom controls -->
    <LinearLayout
        android:id="@+id/bottomControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center|center_vertical"
        android:orientation="horizontal"
        android:padding="20dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp">

        <TextView
            android:id="@+id/skipBtn"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/jost_semibold"
            android:text="@string/btn_skip"
            android:textColor="#8EA2B4"
            android:textSize="15sp" />

        <Button
            android:id="@+id/nextIntroSlideBtn"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#52575B"
            android:fontFamily="@font/jost_semibold"
            android:text="@string/btn_next"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>